# triton-learn

./: pyproject.toml
output/matmul/: softmax-performance.csv
output/softmax/: softmax-performance.csv
output/vectoradd/: vector-add-performance.csv
src/: dropout.py  martixmul.py  softmax.py  vectoradd.py
